# k-dense-byok

./: .gitignore  README.md  litellm_config.yaml  pyproject.toml  server.py
kady_agent/instructions/: gemini_cli.md  main_agent.md
web/src/app/: page.tsx
web/src/components/: sandbox-panel.tsx  workflows-panel.tsx
web/src/components/ai-elements/: message.tsx
web/src/data/: workflows-16-22.json  workflows-9-15.json  workflows.json
web/src/lib/: directory-upload.ts  use-sandbox.ts
